blog/blog-pod.yml
apiVersion: apps/v1
kind: Pod
metadata:
  name: blog
  labels:
    app: app2
specs:
  containers:
  - name: front-end
    image: blog
    ports:
      - containerPort: 3000
  - name: db
    image: redis
