blog/blog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  labels:
    purpose: blog
spec:
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - name: blog
#        image: mparadowsky/blog:env2
        image: unoterr1/blog_pipe:latest
        ports:
          - containerPort: 3000
