blog/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    purpose: database
spec:
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: postgres:latest
