blog/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
   - protocol: TCP
     port: 5432
     targetPort: 3000
