blog/service_db.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-service
spec: 
  selector:
    app: db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
#  type: ClusterIP
#    nodePort: 30003
  type: NodePort
