blog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
spec:
  rules:
  - host: 192.168.64.3
    http:
      paths:
      - path: /blog
        pathType: Prefix
        backend:
          service:
            name: blog-service
            port:
              number: 3000
      - path: /db
        pathType: Prefix
        backend:
          service:
            name: postgresql-service
            port:
              number: 5432
